--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,12 @@
     "leaflet": "^1.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-leaflet": "^1.7.1"
+    "react-facebook-login": "^3.6.2",
+    "react-leaflet": "^1.7.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.14"
