--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "countries-cities": "0.0.11",
+    "geocoder": "^0.2.3",
+    "google-map-react": "^0.24.0",
     "leaflet": "^1.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
