--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "countries-cities": "0.0.11",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "geocoder": "^0.2.3",
+    "google-map-react": "^0.24.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.3"
   }
