--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "google-map-react": "^0.24.0",
     "leaflet": "^1.2.0",
     "react": "^16.0.0",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.0.0",
     "react-facebook-login": "^3.6.2",
     "react-leaflet": "^1.7.1",
