--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^1.7.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-skylight": "^0.5.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
