--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "countries-cities": "0.0.11",
     "geocoder": "^0.2.3",
+    "geodist": "^0.2.1",
     "geolib": "^2.0.23",
     "google-map-react": "^0.24.0",
     "leaflet": "^1.2.0",
